--- a/RemMe/RemMe/Pages/MainPage.xaml
+++ b/RemMe/RemMe/Pages/MainPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:RemMe"
-             x:Class="RemMe.MainPage">
+             x:Class="RemMe.Pages.MainPage">
   <Grid>
     <Grid VerticalOptions="Center" HorizontalOptions="Center">
       <Grid.ColumnDefinitions>
@@ -16,10 +16,10 @@
       </Grid.RowDefinitions>
 
       <Image Source="collect.png" x:Name="Collect"/>
-      <Label Text="Collect Belonging" Grid.Row="1"/>
+      <Label Text="Collect Belonging" Grid.Row="1" HorizontalOptions="Center"/>
 
       <Image Source="search.png" Grid.Column="1" x:Name="Search"/>
-      <Label Text="Search Belonging" Grid.Row="1" Grid.Column="1" />
+      <Label Text="Search Belonging" Grid.Row="1" Grid.Column="1" HorizontalOptions="Center"/>
     </Grid>
   </Grid>
 </ContentPage>
