--- a/RemMe/RemMe/Pages/SearchPage.xaml
+++ b/RemMe/RemMe/Pages/SearchPage.xaml
@@ -7,13 +7,17 @@
 
     <StackLayout Orientation="Horizontal" Padding="5">
       <Entry Text="{Binding Search, Mode=TwoWay}" HorizontalOptions="FillAndExpand"/>
-      <Button Text="Search" HorizontalOptions="End" Clicked="SearchClicked"/>
+      <Button Text="Search" HorizontalOptions="End" Clicked="SearchClicked" TextColor="#FF314A"/>
     </StackLayout>
 
-    <ListView ItemsSource="{Binding Items}" VerticalOptions="Fill">
+    <ListView ItemsSource="{Binding Items}" VerticalOptions="Fill" ItemTapped="OnItemTapped">
       <ListView.ItemTemplate>
         <DataTemplate>
-          <TextCell Text="{Binding Name}" Detail="{Binding Place}" />
+          <TextCell Text="{Binding Name}" Detail="{Binding Place}" DetailColor="#FF314A">
+            <TextCell.ContextActions>
+              <MenuItem Clicked="OnDeleteItem" Text="Delete" IsDestructive="True"/>
+            </TextCell.ContextActions>
+          </TextCell>
         </DataTemplate>
       </ListView.ItemTemplate>
     </ListView>
