--- a/RemMe/RemMe/App.xaml
+++ b/RemMe/RemMe/App.xaml
@@ -3,8 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RememberMe.App">
   <Application.Resources>
+    <ResourceDictionary>
 
-    <!-- Application resource dictionary -->
+      <!-- Styles -->
+      <Style TargetType="NavigationPage">
+        <Setter Property="BarBackgroundColor" Value="#FF314A"/>
+        <Setter Property="BarTextColor" Value="White"/>
+      </Style>
+      <!-- Styles -->
 
+    </ResourceDictionary>
   </Application.Resources>
 </Application>
