--- a/RemMe/RemMe/Pages/RegisterPage.xaml
+++ b/RemMe/RemMe/Pages/RegisterPage.xaml
@@ -7,10 +7,10 @@
 
   <StackLayout VerticalOptions="Center" HorizontalOptions="FillAndExpand" Padding="20, 20, 20, 20">
     <StackLayout BackgroundColor="White" Padding="0, 10, 0, 0">
-    <Entry Text="{Binding Name}"  Placeholder="Belonging name"/>
-    <Entry Text="{Binding Place}" Placeholder="where is it?"/>
+      <Entry Text="{Binding Name}"  Placeholder="Belonging name"/>
+      <Entry Text="{Binding Place}" Placeholder="where is it?"/>
 
-    <Button Text="Save" Clicked="SaveClicked"/>
+      <Button Text="Save" Clicked="SaveClicked" TextColor="#FF314A"/>
     </StackLayout>
   </StackLayout>
 
